Fixed shifting issue with select

--- a/igamt-lite-client/app/styles/main.scss
+++ b/igamt-lite-client/app/styles/main.scss
@@ -2238,6 +2238,10 @@ table.conformance-profiles-table td {
 	height: 29px;
 }
 
+.ui-select-match .btn {
+	margin-top: 0px;
+}
+
 .selectize-control > .selectize-dropdown {
 	top: 36px;
 }
